Fixing code smells + new tests